examen_01 commit finale

--- a/medias_queries.html
+++ b/medias_queries.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-
+<link rel="stylesheet" href="css/medias_queries.css">
     <head>
         <meta charset="utf-8">
 
@@ -17,7 +17,7 @@
                 <h1>Dalaipsum</h1>
                 <p>The Dalai Lama lorem ipsum <a href="http://dalaipsum.com/">Generator</a></p>
             </header>
-
+            
             <section class="pub">
                 <img src="images/buddhist_monk_poster.jpg" alt="Portrait du Dalai Lama">
             </section>
